# Tesis-SynthDS

./: .gitignore  README.md  config.json  debug.py  generate.py  process.py  pyproject.toml  send.py  separate.py  sorter.py
patient_data/: P0001.csv  P0002.csv  P0003.csv  P0004.csv  P0005.csv  P0006.csv  P0007.csv  P0008.csv  P0009.csv  P0010.csv  P0011.csv  P0012.csv  P0013.csv  P0014.csv  P0015.csv  P0016.csv  P0017.csv  P0018.csv  P0019.csv  P0020.csv  P0021.csv  P0022.csv  P0023.csv  P0024.csv  P0025.csv  P0026.csv  P0027.csv  P0028.csv  P0029.csv  P0030.csv  P0031.csv  P0032.csv
